--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '3.4.1'
+    gradleVersion = '3.5'
 }
 
 apply plugin: 'groovy'
@@ -34,7 +34,7 @@ repositories {
 dependencies {
     compile 'org.codehaus.groovy:groovy-all'
 
-    compile 'org.codehaus.gpars:gpars'
+    compile 'org.codehaus.gpars:gpars:1.2.1'
 }
 
 buildScan {
