--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     compile 'org.codehaus.groovy:groovy-all'
 
     compile 'org.codehaus.gpars:gpars:1.2.1'
+
+    compile 'org.twitter4j:twitter4j-core:4.0.6'
 }
 
 buildScan {
